Revert "touch-action: manipulation;"
This reverts commit 64c6d1946e8496d29934583846a4a6bc08dcc73b.

--- a/resources/index.css
+++ b/resources/index.css
@@ -1,5 +1,5 @@
 * {
-  touch-action: manipulation;
+  touch-action: pinch-zoom;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
